# MiMorph

./: .gitignore  LICENSE  README.md  Untitled.ipynb  pyproject.toml
data/: optun_affine_2025-07-19_22-15-09.json  optun_affine_2025-07-20_00-26-20.json
data/params/: optuna_affine_2025-08-23_22-48-43.json  optuna_non_affine_2025-08-24_02-32-01.json
mimorph/: __init__.py  preparation.py  register.py  tissue_classes.py
notebooks/: 0.1-jg-initial-data-exploration.ipynb  0.3-jg-tissue-samples-morphing.ipynb  NonAffineRegistration.ipynb  TissueMorphing.ipynb
tissue_merging_registration/: __init__.py  register.py
